# docs/swagger.yaml
@@ -2113,20 +2113,31 @@ paths:
     get:
       consumes:
       - application/json
-      description: User can see feeds
+      description: |-
+        User can see feeds
+        Select Type:
+        Select Category:
       parameters:
       - description: limit
         in: query
         name: limit
-        type: string
+        type: integer
       - description: Page number
         in: query
         name: page
-        type: string
+        type: integer
       - description: searchkey
         in: query
         name: searchkey
         type: string
+      - description: Page number
+        in: query
+        name: type
+        type: integer
+      - description: searchkey
+        in: query
+        name: category
+        type: integer
       produces:
       - application/json
       responses:
@@ -2407,8 +2418,8 @@ paths:
       produces:
       - application/json
       responses:
-        "200":
-          description: OK
+        "201":
+          description: Created
           schema:
             $ref: '#/definitions/pb.UserDeletePostResponse'
         "403":
